consoladated css all to app.css, added routers, routes and switches. using hosted images instead of local.

--- a/varela/public/index.html
+++ b/varela/public/index.html
@@ -14,7 +14,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Gruppo&family=Lato:wght@300&family=Open+Sans&family=Oxanium&family=Roboto&family=Roboto+Slab&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
 
   <body>
